# simple-wgpu

./: Cargo.toml  README.md
examples/: framework.rs
examples/cube/: main.rs
examples/hello_compute/: main.rs
examples/hello_triangle/: main.rs
src/: bind_group.rs  buffer.rs  command_encoder.rs  compute_pass.rs  compute_pipeline.rs  context.rs  dispatch.rs  draw_call.rs  keyed_cache.rs  lib.rs  pipeline_layout.rs  render_pass.rs  render_pipeline.rs  render_texture.rs  sampler.rs  shader.rs  texture.rs
