[package]
name = "simple-wgpu"
version = "0.2.0"
authors = ["Tristam MacDonald <tristam@trist.am>"]
license = "Apache-2.0"
description = "Ergonomic wrapper around wgpu-rs"

readme = "README.md"
homepage = "https://github.com/swiftcoder/simple-wgpu"
repository = "https://github.com/swiftcoder/simple-wgpu"
documentation = "https://docs.rs/simple-wgpu"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
winit = "0.28"
env_logger = "0.10"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
futures-intrusive = "0.5"
log = "0.4"
async-executor = "1.5"
glam = "0.23"
wgt = { package = "wgpu-types", version = "0.16" }
